refactoring: Clean Archtecture no módulo FoodItem. - Implementada a operação getFoodItemById